@@ -876,3 +876,14 @@ test nagelfar-22.1 {
     execTestFile
 } -result {%%Line   3: E Unknown variable "y"
 Line   3: N Aborted script due to end-of-file marker}
+
+test nagelfar-23.1 {
+    HTML generation
+} -body {
+    createTestFile {
+        proc hej {a b c} {
+        }
+        set apa [hej a b]
+    }
+    execTestFile -flags -html
+} -result {%%<a href=#4>Line   4</a>: <font color=#DD0000><strong>ERROR</strong></font>: Wrong number of arguments (2) to &quot;hej&quot;}
