@@ -1,3 +1,9 @@
+2009-11-22
+ Added support for partial command tokens
+
+2009-11-22
+ Added html output option.
+
 2009-10-03
  Added a check for expr calls in expressions.
 
